# tsa-cpp

./: .gitignore  CMakeLists.txt  README.md
include/models/linear/: OLSModel.hpp  RegressionModel.hpp
include/preprocessing/: stationarity.hpp
include/sizing/: KellyCriterion.hpp
include/tests/: ADFT.hpp  Hurst.hpp
include/tools/: MacKinnonValues.hpp  autoReg.hpp  coreTools.hpp  rolling.hpp
linearModels/: CMakeLists.txt
linearModels/src/: OLS.hpp  OLSModel.hpp  RegressionModel.hpp  modelHelpers.hpp
models/: ADFT.hpp  CMakeLists.txt
models/src/: testModels.cpp
preprocessing/src/: stationarity.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: ADFT.hpp  Hurst.hpp  testAddTrend.cpp  testLagmat.cpp
tests/src/tools/: coreTools.hpp  tools.hpp
tools/: CMakeLists.txt
tools/src/: MacKinnonValues.hpp  coreTools.hpp  coreToolsTests.cpp  npTools.hpp
